--- a/project.json
+++ b/project.json
@@ -1,4 +1,11 @@
 {
+  "configurations": {
+    "Release": {
+      "buildOptions": {
+        "allowUnsafe": false
+      }
+    }
+  },
   "version": "1.0.0-*",
   "buildOptions": {
     "debugType": "portable",
@@ -9,11 +16,19 @@
     "netcoreapp1.1": {
       "dependencies": {
         "Microsoft.NETCore.App": {
-          "type": "platform",
+          // "type": "platform",
           "version": "1.1.0"
         }
       },
       "imports": "dnxcore50"
+    }
+  },
+  "runtimes": {
+    "win81-x64": {
+      "#import": [
+        "win81",
+        "win8-x64"
+      ]
     }
   }
 }
